--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -84,6 +84,11 @@
                       <small>
                           <a title="Edit this {{node.member_of_names_list.0}}" class="edit_res_unit">{% trans " Edit Content" %}</a>|
                           <a title="Edit this {{node.member_of_names_list.0}}" class="edit_settings" href="{% url edit_url group_id node.pk %}">{% trans " Edit Settings" %}</a>
+                          {% get_relation_value node.pk 'has_help' as help_node_and_grel %}
+                          {% if help_node_and_grel.0 %}
+                          |<a href="{% url 'page_details' groupid help_node_and_grel.0 %}" target="_blank" title='{% trans "Click to view help page" %}'>{% trans "Help" %}</a>
+                          {% endif %}
+
                       </small>
                   {% endif %}
 
