--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -128,14 +128,15 @@ list-style: none;
         </ul>
       {% endif %}
 
-    <div class="small-12 medium-4 columns">
-    <!--
-      <label>2 out of 6 modules completed</label>
-      <div class="progress success round">
-      <div class="meter" style="width: 20%"></div>
+    {% if request.user.is_authenticated %}
+      <div class="small-12 medium-4 columns">
+        <label>{{completed_count}} out of {{total_count}} modules completed</label>
+        <div class="progress success round">
+        <div class="meter" style="width: {{course_complete_percentage}}%"></div>
+        </div>
       </div>
-      -->
-    </div>
+    {% endif %}
+
   </div>
   <div class="row collapse meta">
     <div class="key">Starts on</div>
