--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -72,7 +72,7 @@
                 </a>
             </div>
             <a href="{% url redirect_tab_url group_id %}" class="file-detail-modal-close"></a>
-            <a class="close-reveal-modal file-detail-modal-close" aria-label="Close">&#215;</a>
+            <a class="close-reveal-modal" aria-label="Close">&#215;</a>
         </div>
     </div>
     <div class="row gmodal-body">
