--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
@@ -8,7 +8,7 @@
 {% check_is_gstaff groupid request.user as is_gstaff %}
 {% check_group node.pk as is_group %}
 {% check_is_user_group node.pk as is_user_group %}
-{% get_relation_value node.pk 'has_help' as help_node_and_grel %}
+{% get_relation_value node.pk 'has_help' as grel_dict %}
 <style type="text/css">
 	.right-btn, .left-btn{
 		/*float: left;*/
@@ -295,13 +295,16 @@
 		        </ul>
 		        {% endif %}
 		      {% endif %}
-	        
-			<!-- Help info page -->
-				{% if help_node_and_grel.0 %}
-					<div class="row tag-rating-div">
-						<a href="{% url 'page_details' groupid help_node_and_grel.0 %}" target="_blank" title='{% trans "Click to view help page" %}'>{% trans "Help" %}</a>
-					</div>
+
+				{% if grel_dict.cursor and grel_dict.grel_node.count %}
+						<a class="lbl_field tag-rating-div" data-dropdown="help-list" data-options="is_hover:true;align:left"><i class="fi-info"></i> {% trans "Help" %}</a>
+						<ul id="help-list" class="f-dropdown" data-dropdown-content>
+						{% for each_help_page in grel_dict.grel_node %}
+							<li><a href="{% url 'page_details' groupid each_help_page.pk %}" target="_blank" title='{% trans "Click to view help page" %}'>{{each_help_page.name}}</a></li>
+						{% endfor %}
+						</ul>
 				{% endif %}
+	        
 			{% endif %}
 
 			{% endif %}
