--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
@@ -46,57 +46,45 @@
 <div class="scard-image" title="{% firstof resource.altnames resource.name %}">
 
     {% get_dict_from_list_of_dicts resource.attribute_set as attr_set_dict %}
-    {% get_relation_value resource.pk 'has_thumbnail' as thumbnail_img_and_grel_hl %}
-    {% if thumbnail_img_and_grel_hl.0 %}
-      {% get_node logo_img as thumbnail_img_and_grel_hl.0 %}
-      {% if thumbnail_img_and_grel_hl.0.fs_file_ids.1 %}
-        <img src="{% url 'get_gridfs_resource' thumbnail_img_and_grel_hl.0.fs_file_ids.2 %}" alt="" />
-      {% endif %}
-    {% elif resource.fs_file_ids.2 and not 'video' in resource.mime_type %}
-    <img src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
-    {% elif resource.fs_file_ids.1 %}
-    <img src="{% url 'getImageThumbnail' first_arg second_arg %}" alt="">
 
+
+
+
+    {% get_relation_value resource.pk 'has_thumbnail' as grel_dict %}
+    {% if not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.fs_file_ids.1 %}
+        <img src="{% url 'get_gridfs_resource' grel_dict.grel_node.fs_file_ids.2 %}" alt="" />
+    {% elif resource.fs_file_ids.2 and not 'video' in resource.mime_type %}
+      <img src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
+    {% elif resource.fs_file_ids.1 %}
+      <img src="{% url 'getImageThumbnail' first_arg second_arg %}" alt="">
     {% elif "File" in resource.member_of_names_list or "Page" in resource.member_of_names_list%}
       {% if attr_set_dict.educationaluse and attr_set_dict.educationaluse != "Documents" %}
         <i class="{{attr_set_dict.educationaluse|lower}}"></i>
-
-
       {% elif resource.fs_file_ids.0 and 'image' in resource.mime_type %}
         <img src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
-
       {% elif resource.mime_type %}
         <i class="{{resource.mime_type|lower|split:'/'|join:' '}}"></i>
       {% else  %}
         <i class="{{resource.member_of_names_list.0|lower }}"></i>
       {% endif %}
-
     {% elif "Group" in resource.member_of_names_list or has_logo == True or has_prof_pic == True %}
       {% if "Course" in resource.member_of_names_list or has_logo == True %}
-        {% get_relation_value resource.pk 'has_logo' as logo_img_and_grel_hl %}
-        {% if logo_img_and_grel_hl.0 %}
-          {% get_node logo_img as logo_img_and_grel_hl.0 %}
-          {% if logo_img_and_grel_hl.0.fs_file_ids.1 %}
-            <img src="{% url 'get_gridfs_resource' logo_img_and_grel_hl.0.fs_file_ids.2 %}" alt="" />
-          {% endif %}
-        {% else %}
-          <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  class="img-height">
 
+        {% get_relation_value resource.pk 'has_logo' as grel_dict %}
+        {% if not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.fs_file_ids.1 %}
+                  <img src="{% url 'get_gridfs_resource' grel_dict.grel_node.fs_file_ids.2 %}" alt="" />
+          {% else %}
+                  <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  height="20px" width="20px" >
         {% endif %}
+
 
       {% else %}
-        {% get_relation_value resource.pk 'has_profile_pic' as logo_img_and_grel_pp %}
-        {% if logo_img_and_grel_pp.0 %}
-          {% get_node logo_img as logo_img_and_grel_pp.0 %}
-          {% if logo_img_and_grel_pp.0.fs_file_ids.1 %}
-            <img src="{% url 'get_gridfs_resource' logo_img_and_grel_pp.0.fs_file_ids.2 %}" alt="" />
-          {% elif logo_img_and_grel_pp.0.fs_file_ids.0 %}
-            <img src="{% url 'get_gridfs_resource' logo_img_and_grel_pp.0.fs_file_ids.0 %}" alt="" />
-          {% endif %}
-        {% else %}
-          <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  class="img-height">
+        {% get_relation_value resource.pk 'has_profile_pic' as grel_dict %}
+        {% if not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.fs_file_ids.1 %}
+                  <img src="{% url 'get_gridfs_resource' grel_dict.grel_node.fs_file_ids.2 %}" alt="" />
+          {% else %}
+                  <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  height="20px" width="20px" >
         {% endif %}
-
       {% endif %}
 
     {% elif resource.collection_set  %}
