--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
@@ -366,13 +366,14 @@
                   <h1>
                     <a href="{{site.HOME_PAGE|default_if_none:'/home/'}}">
 
-                          {% get_relation_value group_object.pk 'has_profile_pic' as prof_pic_grel %}
-                            {% if prof_pic_grel.0 %}
-                                    <img src="{% url 'getFileThumbnail' group_id prof_pic_grel.0.pk %}" />
-                            {% else %}
+                          {% get_relation_value group_object.pk 'has_profile_pic' as grel_dict %}
+                          {% if not grel_dict.cursor and grel_dict.grel_node %}
+                                    <img src="{% url 'getFileThumbnail' group_id grel_dict.grel_node.pk %}" />
+                          {% else %}
                                     <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  height="20px" width="20px" >
-                            {% endif %}
-                            <span>{% firstof group_object.altnames|truncatechars:7 group_object.name|truncatechars:7 %}</span>
+                          {% endif %}
+
+                          <span>{% firstof group_object.altnames|truncatechars:7 group_object.name|truncatechars:7 %}</span>
                     </a>
                   </h1>
                 </li>
