--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -84,11 +84,16 @@
                       <small>
                           <a title="Edit this {{node.member_of_names_list.0}}" class="edit_res_unit">{% trans " Edit Content" %}</a>|
                           <a title="Edit this {{node.member_of_names_list.0}}" class="edit_settings" href="{% url edit_url group_id node.pk %}">{% trans " Edit Settings" %}</a>
-                          {% get_relation_value node.pk 'has_help' as help_node_and_grel %}
-                          {% if help_node_and_grel.0 %}
-                          |<a href="{% url 'page_details' groupid help_node_and_grel.0 %}" target="_blank" title='{% trans "Click to view help page" %}'>{% trans "Help" %}</a>
-                          {% endif %}
 
+                          {% get_relation_value node.pk 'has_help' as grel_dict %}
+                            {% if grel_dict.cursor and grel_dict.grel_node.count %}
+                                |<a class="lbl_field tag-rating-div" data-dropdown="help-list" data-options="is_hover:true;align:bottom"><i class="fi-info"></i> {% trans "Help" %}</a>
+                                <ul id="help-list" class="f-dropdown" data-dropdown-content>
+                                {% for each_help_page in grel_dict.grel_node %}
+                                  <li><a href="{% url 'page_details' groupid each_help_page.pk %}" target="_blank" title='{% trans "Click to view help page" %}'>{{each_help_page.name}}</a></li>
+                                {% endfor %}
+                                </ul>
+                            {% endif %}
                       </small>
                   {% endif %}
 
