--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourse_event_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourse_event_group.html
@@ -56,9 +56,9 @@
 
     </div> 
       {% if title == "gallery" %} 
-        {% include 'ndf/pagination.html' with urlname="course_gallery_paged" first_arg=group_name_tag second_arg=""  third_arg="" page_info=gallery_page_info %}
+        {% include 'ndf/pagination.html' with urlname="course_gallery_paged" first_arg=group_name_tag page_info=gallery_page_info %}
       {% elif title == "raw material" %}
-        {% include 'ndf/pagination.html' with urlname="course_raw_material_paged" first_arg=group_name_tag second_arg=""  third_arg="" page_info=raw_material_page_info %}
+        {% include 'ndf/pagination.html' with urlname="course_raw_material_paged" first_arg=group_name_tag    page_info=raw_material_page_info %}
       {% endif  %}
 
 {% endblock %}
