added classes and attributes to img

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
@@ -50,12 +50,12 @@
     {% if thumbnail_img_and_grel_hl.0 %}
       {% get_node logo_img as thumbnail_img_and_grel_hl.0 %}
       {% if thumbnail_img_and_grel_hl.0.fs_file_ids.1 %}
-        <img src="{% url 'get_gridfs_resource' thumbnail_img_and_grel_hl.0.fs_file_ids.2 %}" alt="" />
+        <img data-id="{{resource.pk}}" class ="scard-thumbnail" src="{% url 'get_gridfs_resource' thumbnail_img_and_grel_hl.0.fs_file_ids.2 %}" alt="" />
       {% endif %}
     {% elif resource.fs_file_ids.2 and not 'video' in resource.mime_type %}
-    <img src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
+    <img data-id="{{resource.pk}}" src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
     {% elif resource.fs_file_ids.1 %}
-    <img src="{% url 'getImageThumbnail' first_arg second_arg %}" alt="">
+    <img data-id="{{resource.pk}}" src="{% url 'getImageThumbnail' first_arg second_arg %}" alt="">
 
     {% elif "File" in resource.member_of_names_list or "Page" in resource.member_of_names_list%}
       {% if attr_set_dict.educationaluse and attr_set_dict.educationaluse != "Documents" %}
@@ -63,7 +63,7 @@
 
 
       {% elif resource.fs_file_ids.0 and 'image' in resource.mime_type %}
-        <img src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
+        <img data-id="{{resource.pk}}" src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
 
       {% elif resource.mime_type %}
         <i class="{{resource.mime_type|lower|split:'/'|join:' '}}"></i>
@@ -77,10 +77,10 @@
         {% if logo_img_and_grel_hl.0 %}
           {% get_node logo_img as logo_img_and_grel_hl.0 %}
           {% if logo_img_and_grel_hl.0.fs_file_ids.1 %}
-            <img src="{% url 'get_gridfs_resource' logo_img_and_grel_hl.0.fs_file_ids.2 %}" alt="" />
+            <img data-id="{{resource.pk}}" src="{% url 'get_gridfs_resource' logo_img_and_grel_hl.0.fs_file_ids.2 %}" alt="" />
           {% endif %}
         {% else %}
-          <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  class="img-height">
+          <img data-id="{{resource.pk}}" src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  class="img-height">
 
         {% endif %}
 
@@ -89,12 +89,12 @@
         {% if logo_img_and_grel_pp.0 %}
           {% get_node logo_img as logo_img_and_grel_pp.0 %}
           {% if logo_img_and_grel_pp.0.fs_file_ids.1 %}
-            <img src="{% url 'get_gridfs_resource' logo_img_and_grel_pp.0.fs_file_ids.2 %}" alt="" />
+            <img data-id="{{resource.pk}}" src="{% url 'get_gridfs_resource' logo_img_and_grel_pp.0.fs_file_ids.2 %}" alt="" />
           {% elif logo_img_and_grel_pp.0.fs_file_ids.0 %}
-            <img src="{% url 'get_gridfs_resource' logo_img_and_grel_pp.0.fs_file_ids.0 %}" alt="" />
+            <img data-id="{{resource.pk}}" src="{% url 'get_gridfs_resource' logo_img_and_grel_pp.0.fs_file_ids.0 %}" alt="" />
           {% endif %}
         {% else %}
-          <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  class="img-height">
+          <img data-id="{{resource.pk}}" src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  class="img-height">
         {% endif %}
 
       {% endif %}
@@ -103,7 +103,7 @@
         <i class="collection"></i>
 
     {% else%}
-      <img src="/static/ndf/images/metaStudio-profile.svg"  class="img-height">
+      <img data-id="{{resource.pk}}" src="/static/ndf/images/metaStudio-profile.svg"  class="img-height">
     {% endif %}
   </div>
 </div>
@@ -129,19 +129,13 @@
 </a>
 
 <!-- suppy no_footer=True for not having footer-->
-{% if not no_footer %}
   <div class="scard-action">
     {% if has_contributor == True %}
      <a href="{% url 'dashboard' resource.created_by %}" title="{{resource.created_by|get_username}}" target="_blank">
       {{resource.created_by|get_username|truncatechars:"10"}}</a>|
      {% endif %}
          <i style="float">{{resource.created_at|date:"d-m-Y"}}</i>
-     {% if gstaff_access  %}
-      {% if not no_checkbox %}
         </a> <input type="checkbox" style="margin:0; float:right;" class="filenode" name="filenode" value="{{resource.pk}}">
-      {% endif %}
-    {% endif %}
-  </div>
-{% endif %}
+        </div>
 </a>
 </div>
