Removed invalid statemnt

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/data_review_tbody.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/data_review_tbody.html
@@ -12,7 +12,7 @@
         <input type="button" id="btnPurgeRestoreConfirmYes" class="button tiny secondary" value="{% trans 'Yes' %}">
         <input type="button" id="btnPurgeRestoreConfirmNo" class="button tiny secondary" value="{% trans 'No' %}">
     </div>
-    <input type="hidden" class="oid_val" value="{{resource.pk}}">
+    <input type="hidden" class="oid_val">
     <input type="hidden" class="action_val">
     <a class="close-reveal-modal">&#215;</a>
   </div>
