--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
@@ -102,8 +102,10 @@
 
                     <div class="small-12 medium-10 columns gallery-actions" >
                         <div class="create-note">
+                         <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" style="margin: 0em 0em 1em;">
                             <i class="fi-page-edit"></i>
                             <span> Create note</span>
+                        </a>
                         </div>
                         <div class="create-collection">
                             <i class="fi-folder"></i>
@@ -278,6 +280,7 @@
         alert($(this).closest("div").attr("class"));
          var url = $(this).closest('.scard-container').find('img').attr('src');
          alert(url); 
+         CKEDITOR.instances['ckeditor_textarea'].insertHtml('<div>shree ganesha</div>');
       });
 
   })
